--- a/lib/init/config.ini
+++ b/lib/init/config.ini
@@ -1,9 +1,9 @@
 [Important]
-movespeed=28
-numberofsprinkers=1
-numberofbees=25
-slotnumber=1
-viplink=
+Movespeed=28
+NumberOfSprinkers=1
+NumberOfBees=25
+SlotNumber=1
+VIPLink=
 [Keybinds]
 Layout=qwerty
 Forward=w
