variables for gui

--- a/lib/init/config.ini
+++ b/lib/init/config.ini
@@ -1,23 +1,30 @@
-[Important]
+
+        [Important]
         Movespeed=28
         NumberOfSprinklers=1
         NumberOfBees=25
         SlotNumber=1
         VIPLink=
-        MoveMethod=Glider
-        ReturnMethod=Reset
+        MoveMethod=Cannon
+        [Unlocks]
+        HasRedCannon=1
+        HasParachute=1
+        HasGlider=1
+        HasBearBee=1
+        HasGiftedVicious=1
         [Keybinds]
         Layout=qwerty
-        Forward=w
-        Backward=s
-        Left=a
-        Right=d
-        CameraRight=.
-        CameraLeft=,
-        CameraIn=i
-        CameraOut=o
-        CameraUp=PgDn
-        CameraDown=PgUp
+        ForwardKey=w
+        BackwardKey=s
+        LeftKey=a
+        RightKey=d
+        CameraRightKey=.
+        CameraLeftKey=,
+        CameraInKey=i
+        CameraOutKey=o
+        CameraUpKey=PgDn
+        CameraDownKey=PgUp
+        KeyDelay=0
         [Hotbar]
         SprinklerHotbar=1
         BlueExtractHotbar=0
