--- a/lib/init/fields.ini
+++ b/lib/init/fields.ini
@@ -1,4 +1,4 @@
-[Settings]
+[Config]
         FieldRotationList=Pine Tree|
         CurrentlySelectedField=Pine Tree
-        NonRotationList=Bamboo|Blue Flower|Cactus|Clover|Coconut|Dandelion|Mountain Top|Mushroom|Pepper|Pineapple|Pumpkin|Rose|Spider|Strawberry|Stump|Sunflower
+        NonRotationList=Bamboo|Blue Flower|Cactus|Clover|Coconut|Dandelion|Mountain Top|Mushroom|Pepper|Pineapple|Pumpkin|Rose|Spider|Strawberry|Stump|Sunflower|
